# SEJ

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: schema.md  todo.md
sej/: app.py  branch.py  changelog.py  db.py  importer.py  queries.py
sej/templates/: budget_lines.html  group_details.html  history.html  index.html  nonproject_by_group.html  nonproject_by_person.html  project_details.html  reports.html
tests/: test_app.py  test_branch.py  test_changelog.py  test_db.py  test_importer.py
